nohup.out

Tweet by: @5421Awadh
Retweeted the tweet
Followed the user
Traceback (most recent call last):
  File "retweet.py", line 24, in <module>
    sleep(3600)
KeyboardInterrupt

Tweet by: @SGMer
Retweeted the tweet
Followed the user

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @CapUnedited
Retweeted the tweet
Followed the user

Tweet by: @SGMer
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @CapUnedited
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @SGMer
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @NatureCutsTags
Retweeted the tweet
Followed the user

Tweet by: @SGMer
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @NatureCutsTags
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @SGMer
Retweeted the tweet

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]

Tweet by: @RaulChatBot
[{'code': 327, 'message': 'You have already retweeted this tweet.'}]
  File "retweet.py", line 13
    wle (True):
              ^
SyntaxError: invalid syntax
  File "retweet.py", line 13
    wle (True):
              ^
SyntaxError: invalid syntax
  File "retweet.py", line 13
    wle (True):
              ^
SyntaxError: invalid syntax
  File "retweet.py", line 13
    wle (True):
              ^
SyntaxError: invalid syntax
  File "retweet.py", line 13
    wle (True):
              ^
SyntaxError: invalid syntax
  File "retweet.py", line 13
    wle (True):
              ^
SyntaxError: invalid syntax
